# CubeMegaMod

./: .gitmodules  CMakeLists.txt  GenerateProjectCMake.py  LICENSE  README.md  main.cpp  main.h
cwmods/: CMakeLists.txt  CMakeSettings.json  GenerateVtablePadding.py  MakeCWModsCMake.py  README.md  VtablePadding.h  cwsdk.cpp  cwsdk.h
cwmods/IDA/: types.h
cwmods/common/: ByteRGBA.cpp  ByteRGBA.h  BytesIO.cpp  BytesIO.h  ColorRGB.cpp  ColorRGB.h  DoubleVector3.cpp  DoubleVector3.h  FloatRGBA.cpp  FloatRGBA.h  FloatVector2.cpp  FloatVector2.h  FloatVector3.cpp  FloatVector3.h  IntVector2.cpp  IntVector2.h  IntVector3.cpp  IntVector3.h  LongVector3.cpp  LongVector3.h  Matrix4.cpp  Matrix4.h  RGBA.cpp  RGBA.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  math.cpp  math.h  types.h
cwmods/cube/: AI.cpp  AI.h  AdaptionWidget.cpp  AdaptionWidget.h  BaseWidget.cpp  BaseWidget.h  Block.h  BlockProperties.cpp  BlockProperties.h  CharacterPreviewWidget.cpp  CharacterPreviewWidget.h  CharacterStyleWidget.cpp  CharacterStyleWidget.h  CharacterWidget.cpp  CharacterWidget.h  ChatWidget.cpp  ChatWidget.h  Client.cpp  Client.h  Connection.h  Controls.cpp  Controls.h  ControlsWidget.cpp  ControlsWidget.h  Creature.cpp  Creature.h  Database.h  EnchantWidget.cpp  EnchantWidget.h  Equipment.cpp  Equipment.h  Field.h  FormulaDetailsWidget.cpp  FormulaDetailsWidget.h  GUI.cpp  GUI.h  Game.cpp  Game.h  HelpWidget.cpp  HelpWidget.h  (+64 more)
cwmods/gfx/: Chunk.cpp  Chunk.h  ChunkBuffer.h  D3D11Graphics.cpp  D3D11Graphics.h  D3D11IndexBuffer.cpp  D3D11IndexBuffer.h  D3D11Renderer.cpp  D3D11Renderer.h  D3D11VertexBuffer.cpp  D3D11VertexBuffer.h  Graphics.cpp  Graphics.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.h  VertexBuffer.cpp  VertexBuffer.h
cwmods/msvc/: _Thrd_t.cpp  _Thrd_t.h
cwmods/plasma/: Array.h  Attribute.cpp  Attribute.h  ContinuousAttribute.cpp  ContinuousAttribute.h  D3D11Engine.cpp  D3D11Engine.h  DiscreteAttribute.cpp  DiscreteAttribute.h  Display.cpp  Display.h  Engine.h  FontEngine.cpp  FontEngine.h  Keyable.cpp  Keyable.h  Matrix.cpp  Matrix.h  NamedObject.cpp  NamedObject.h  Node.cpp  Node.h  Object.h  ObjectManager.h  ScalableFont.cpp  ScalableFont.h  Transformation.cpp  Transformation.h  Vector.h  Widget.cpp  Widget.h
src/: CubeMod.h  cwsdk-extension.h  hooks.cpp  hooks.h
src/cwsdk-extension/: Inventory.cpp  Inventory.h  Item.h  Timer.h
src/cwsdk-extension/ability/: Ability.cpp  Ability.h  ConvertMTSAbility.h  FarJumpAbility.cpp  FarJumpAbility.h  HealAbility.cpp  HealAbility.h
src/cwsdk-extension/button/: DButton.cpp  DButton.h
src/cwsdk-extension/creature/: Creature.cpp  Creature.h  CreatureFactory.cpp  CreatureFactory.h
src/cwsdk-extension/events/: AddGoldEvent.cpp  AddGoldEvent.h  DivingEvent.cpp  DivingEvent.h  Event.cpp  Event.h  EventList.cpp  EventList.h
src/cwsdk-extension/helper/: FileParser.cpp  FileParser.h  Helper.cpp  Helper.h
src/cwsdk-extension/quest/: Quest.cpp  Quest.h
src/hooks/: ChestInteractionHandler.h  CreatureDeathHandler.h  CreatureTalkHandler.h  ItemDropPatch.h  ItemPriceHandler.h  RegionLockUpdate.h  ShopInteractionHandler.h  chest_opening.h  drop_gold_on_hit.h  lore_increase.h
src/memory_helper/: memory_helper.h
src/mods/BeginnerModeMod/: BeginnerModeMod.cpp  BeginnerModeMod.h
src/mods/CombatUpdatesMod/: CombatUpdateMod.cpp  CombatUpdateMod.h
src/mods/CreatureUpdatesMod/: CreatureUpdatesMod.cpp  CreatureUpdatesMod.h
src/mods/GemTraderMod/: GemTraderMod.cpp  GemTraderMod.h
src/mods/LoreInteractionMod/: LoreInteractionMod.cpp  LoreInteractionMod.h
src/mods/NewClassesMod/: CharacterClass.h  NewClassesMod.cpp  NewClassesMod.h
src/mods/NewClassesMod/abilities/: FullHealAbility.h  HealingPuddle.h  LavaPuddle.h  PoisonPuddle.h
src/mods/NewClassesMod/classes/: MonkClass.cpp  MonkClass.h  TempClass.cpp  TempClass.h  TempClass2.cpp  TempClass2.h
src/mods/NewClassesMod/hooks/: CharacterCreationHandler.h  OnCreatureCanEquipItem.h  OnCreaturePassiveMana.h  OnExecuteAbility.h  OnGetShiftAbilityID.h  OnGetUltimateAbilityCooldown.h  OnGetUltimateAbilityID.h
src/mods/PlayerUpdatesMod/: PlayerUpdatesMod.cpp  PlayerUpdatesMod.h
src/mods/PlayerUpdatesMod/abilities/: HealingPuddle.h  LavaPuddle.h  PoisonPuddle.h
src/mods/PlayerUpdatesMod/classes/: MonkClass.cpp
src/mods/PlayerUpdatesMod/hooks/: CharacterCreationHandler.h  CharacterStyleWidget_UpdateCreature.h  OnCreatureCanEquipItem.h  OnCreaturePassiveMana.h  OnExecuteAbility.h  OnGenerateCreatureAppearance.h  OnGetShiftAbilityID.h  OnGetUltimateAbilityCooldown.h  OnGetUltimateAbilityID.h  TreasureFixHandler.h
src/mods/QuestMod/: QuestMod.cpp  QuestMod.h
src/mods/QuestMod/hooks/: ChangeQuestDescription.h  ChangeQuestItemName.h
src/mods/RegionLockUpdateMod/: RegionLockUpdateMod.cpp  RegionLockUpdateMod.h
src/mods/SeaExplorationMod/: SeaExplorationMod.cpp  SeaExplorationMod.h
src/mods/SeaExplorationMod/event/: DivingEvent.cpp  DivingEvent.h
src/mods/ShopUpdateMod/: ShopUpdateMod.cpp  ShopUpdateMod.h
src/mods/StackUpdatesMod/: StackUpdatesMod.cpp  StackUpdatesMod.h
src/mods/WeaponUpgradeMod/: WeaponUpgradeMod.cpp  WeaponUpgradeMod.h
src/mods/WeaponUpgradeMod/hooks/: ModifyWeaponUpgrade.h  SmithyInteraction.h
src/mods/WorldGenMod/: WorldGenMod.cpp  WorldGenMod.h
src/mods/WorldGenMod/Noise/: SimplexNoise.cpp  SimplexNoise.h
src/mods/WorldGenMod/WorldGenOverride/: BuildingTypeOverwrite.h  WorldGenOverride.h
