cmake_minimum_required (VERSION 3.8)
project(project_CubeMegaMod)
add_subdirectory(cwmods)
add_library (CubeMegaMod-v0.2.1 SHARED "main.cpp" "src/cwsdk-extension.h"  "src/hooks.h" "src/hooks.cpp" "src/hooks/drop_gold_on_hit.h" "src/cwsdk-extension/events/Event.cpp" "src/cwsdk-extension/events/AddGoldEvent.h" "src/cwsdk-extension/events/AddGoldEvent.cpp" "src/cwsdk-extension/Timer.h" "src/cwsdk-extension/events/DivingEvent.h" "src/cwsdk-extension/events/DivingEvent.cpp" "src/cwsdk-extension/Inventory.h" "src/cwsdk-extension/Inventory.cpp" "src/cwsdk-extension/Item.h" "src/cwsdk-extension/creature/Creature.h" "src/cwsdk-extension/events/EventList.h" "src/cwsdk-extension/events/EventList.cpp" "src/cwsdk-extension/creature/CreatureFactory.h" "src/cwsdk-extension/creature/CreatureFactory.cpp" "src/hooks/chest_opening.h")
target_link_libraries (CubeMegaMod-v0.2.1 LINK_PUBLIC CWSDK)