cmake_minimum_required (VERSION 3.8)
project(project_CubeMegaMod)
add_subdirectory(cwmods)
add_library (CubeMegaMod-v1.4.0 SHARED "main.cpp" 
"src/cwsdk-extension.h"  
"src/hooks.h" 
"src/hooks.cpp" 
"src/hooks/drop_gold_on_hit.h" 
"src/cwsdk-extension/events/Event.cpp" 
"src/cwsdk-extension/events/AddGoldEvent.h" 
"src/cwsdk-extension/events/AddGoldEvent.cpp" 
"src/cwsdk-extension/Timer.h"
 "src/mods/SeaExplorationMod/event/DivingEvent.h"
 "src/mods/SeaExplorationMod/event/DivingEvent.cpp" 
"src/cwsdk-extension/Inventory.h" 
"src/cwsdk-extension/Inventory.cpp" 
"src/cwsdk-extension/Item.h" 
"src/cwsdk-extension/creature/Creature.h" 
"src/cwsdk-extension/events/EventList.h" 
"src/cwsdk-extension/events/EventList.cpp" 
"src/cwsdk-extension/creature/CreatureFactory.h" 
"src/cwsdk-extension/creature/CreatureFactory.cpp" 
"src/hooks/chest_opening.h" 
"src/cwsdk-extension/ability/Ability.h" 
"src/cwsdk-extension/ability/Ability.cpp" 
"src/cwsdk-extension/ability/HealAbility.h" 
"src/cwsdk-extension/ability/HealAbility.cpp" 
"src/cwsdk-extension/ability/FarJumpAbility.h"
"src/cwsdk-extension/ability/FarJumpAbility.cpp"
"src/cwsdk-extension/button/DButton.cpp" 
"src/cwsdk-extension/button/DButton.h" 
"src/cwsdk-extension/ability/ConvertMTSAbility.h"
"src/hooks/lore_increase.h" 
"src/cwsdk-extension/helper/Helper.h"
"src/cwsdk-extension/helper/Helper.cpp" 
"src/cwsdk-extension/helper/FileParser.h"
"src/cwsdk-extension/helper/FileParser.cpp"
"src/CubeMod.h" 
"src/mods/SeaExplorationMod/SeaExplorationMod.h"
"src/mods/SeaExplorationMod/SeaExplorationMod.cpp"
"src/hooks/ChestInteractionHandler.h"
"src/mods/LoreInteractionMod/LoreInteractionMod.h" 
"src/mods/LoreInteractionMod/LoreInteractionMod.cpp"
"src/mods/CombatUpdatesMod/CombatUpdateMod.h"
"src/mods/CombatUpdatesMod/CombatUpdateMod.cpp" 
"src/mods/BeginnerModeMod/BeginnerModeMod.h"
"src/mods/BeginnerModeMod/BeginnerModeMod.cpp" 
"src/mods/CreatureUpdatesMod/CreatureUpdatesMod.h" 
"src/mods/CreatureUpdatesMod/CreatureUpdatesMod.cpp" 
"src/hooks/ShopInteractionHandler.h"
"src/mods/ShopUpdateMod/ShopUpdateMod.h"
"src/mods/ShopUpdateMod/ShopUpdateMod.cpp"
"src/hooks/ItemPriceHandler.h" 
"src/mods/WorldGenMod/WorldGenMod.cpp" 
"src/mods/WorldGenMod/WorldGenMod.h" 
"src/mods/WorldGenMod/WorldGenOverride/WorldGenOverride.h" 
"src/mods/WorldGenMod/Noise/SimplexNoise.h" 
"src/mods/WorldGenMod/Noise/SimplexNoise.cpp" "src/hooks/ItemDropPatch.h")
target_link_libraries (CubeMegaMod-v1.4.0 LINK_PUBLIC CWSDK)